# DeepSea

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  update.sh
Application/ApplicationSDL/: CMakeLists.txt  README.md  library.cmake
Application/ApplicationSDL/src/: SDLApplication.c  SDLController.c  SDLController.h  SDLKeyboard.c  SDLKeyboard.h  SDLWindow.c  SDLWindow.h  SDLWindow.m
Application/ApplicationSDL/test/: CMakeLists.txt
Core/: CMakeLists.txt  README.md  library.cmake
Core/src/: Atomic.c  Bits.c  Error.c  Log.c  Profile.c  Sort.c  Timer.c
Core/src/Containers/: Hash.c  HashTable.c  List.c  ResizeableArray.c
Core/src/Memory/: Allocator.c  (+3 more)
Core/test/: AllocatorTest.cpp  AtomicTest.cpp  BufferAllocatorTest.cpp  CMakeLists.txt  ConditionVariableTest.cpp  ErrorTest.cpp  FileStreamTest.cpp  HashTableTest.cpp  HashTest.cpp  ListTest.cpp  LogTest.cpp  MemoryStreamTest.cpp  MutexTest.cpp  PathTest.cpp  PoolAllocatorTest.cpp  ProfileDisabledTest.cpp  ProfileTest.cpp  ResizeableArrayTest.cpp  SortTest.cpp  SpinlockTest.cpp  StreamTest.cpp  SystemAllocatorTest.cpp  ThreadTest.cpp
Geometry/: CMakeLists.txt  README.md  library.cmake
Geometry/src/: AlignedBox2.c  AlignedBox3.c  Frustum3.c  OrientedBox2.c  OrientedBox3.c  Plane3.c
Geometry/test/: AlignedBox2Test.cpp  AlignedBox3Test.cpp  CMakeLists.txt  Frustum3Test.cpp  OrientedBox2Test.cpp  OrientedBox3Test.cpp  Plane3Test.cpp
Math/: CMakeLists.txt  library.cmake
Math/src/: Color.c  Core.c  Matrix22.c  Matrix33.c  Matrix33Impl.h  Matrix44.c  Packing.c  Random.c  Vector2.c  Vector3.c  Vector4.c
Math/test/: CMakeLists.txt  ColorTest.cpp  CoreTest.cpp  Matrix22Test.cpp  Matrix33Test.cpp  Matrix44Test.cpp  PackingTest.cpp  RandomTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp
Render/: CMakeLists.txt  README.md  library.cmake
Render/RenderMock/: CMakeLists.txt  library.cmake
Render/RenderOpenGL/: CMakeLists.txt  library.cmake
Render/cmake/: CompileShaders.cmake  ConvertTexture.cmake
Render/src/: CommandBuffer.c  CommandBufferPool.c  RenderPass.c  RenderSurface.c  Renderer.c
Render/test/: CMakeLists.txt  GfxFormatTest.cpp  ResourceUtilsTest.cpp  VertexFormatTest.cpp
RenderMock/: CMakeLists.txt  README.md  library.cmake
RenderMock/src/: MockCommandBuffer.c  MockCommandBuffer.h  MockCommandBufferPool.c  MockCommandBufferPool.h  MockDrawGeometry.c  MockDrawGeometry.h  MockGfxBuffer.c  MockGfxBuffer.h  MockMaterialDesc.c  MockMaterialDesc.h  MockRender.c  MockRenderSurface.c  MockRenderSurface.h  MockRenderer.c  MockResourceManager.c  MockShader.c  MockShaderModule.c  MockShaderVariableGroupDesc.c  MockShaderVariableGroupDesc.h  MockTexture.c  MockTexture.h
RenderMock/test/: AssetFixtureBase.cpp  CMakeLists.txt  CommandBufferTest.cpp  DrawGeometryTest.cpp  FixtureBase.h  FramebufferTest.cpp  GfxBufferTest.cpp  GfxFenceTest.cpp  GfxFormatTest.cpp  MaterialDescTest.cpp  MaterialTest.cpp  MaterialTypeTest.cpp  RenderPassTest.cpp  RenderSurfaceTest.cpp  RenderbufferTest.cpp  RendererTest.cpp  ResourceManagerTest.cpp  ShaderModuleTest.cpp  ShaderTest.cpp  ShaderVariableGroupDescTest.cpp  ShaderVariableGroupTest.cpp  TextureDataTest.cpp  TextureTest.cpp  VertexFormatTest.cpp  VolatileMaterialValuesTest.cpp  main.cpp
Testers/TestCube/: CMakeLists.txt  SetupOpenGL.c  SetupOpenGL.h  TestCube.c  TestCube.msl
Testers/TestText/: CMakeLists.txt  Font.msl  FontTess.msl  TestText.c
Text/: CMakeLists.txt  README.md  library.cmake
Text/src/: Font.c  FontImpl.c  FontImpl.h  FontImplOss.c  Text.c  TextLayout.c  TextRenderBuffer.c  Unicode.c
Text/test/: CMakeLists.txt  UnicodeTest.cpp
doc/: CMakeLists.txt  Doxyfile.in
modules/Animation/: CMakeLists.txt  README.md
modules/Core/: CMakeLists.txt
modules/Math/: CMakeLists.txt  README.md
modules/Particle/: CMakeLists.txt  README.md
modules/Render/: CMakeLists.txt
modules/Scene/: CMakeLists.txt  README-conversion.md  README.md
modules/Text/: CMakeLists.txt  README.md
modules/VectorDraw/: CMakeLists.txt  README.md
testers/TestAnimation/: CMakeLists.txt  Character.msl  CharacterShadowCast.msl  Grass.msl  Pitch.msl  README.md  ShadowCast.msl  TestAnimation.c  Wood.msl
testers/TestCube/: CMakeLists.txt  README.md  SetupOpenGL.c  TestCube.c  TestCube.msl
testers/TestLighting/: AmbientLightFI.msl  CMakeLists.txt  ComputeSSAO.msl  DirectionalLight.msl  DirectionalLightFI.msl  ForwardLighting.msl  GBuffers.msl  GBuffersFI.msl  Glass.msl  GlassDeferredFI.msl  PointLight.msl  PointLightFI.msl  README.md  SSAOAmbientLight.msl  SSAOAmbientLightFI.msl  SSAODirectionalLight.msl  SSAOPointLight.msl  SSAOPrepass.msl  SSAOSpotLight.msl  ShadowCast.msl  SpotLight.msl  SpotLightFI.msl  TestLighting.c  sRGB.msl  sRGBDeferredFI.msl  sRGBForwardFI.msl
testers/TestRenderSubpass/: CMakeLists.txt  Cube.msl  README.md  Resolve.msl  SetupOpenGL.h  TestRenderSubpass.c
testers/TestScene/: CMakeLists.txt  LightData.c  LightData.cpp  LightData.fbs  LightData.h  LightData_generated.h  README.md  TestScene.c  TestScene.msl  TestSceneCube.msl  TestSceneGround.msl  TestSceneUpdate.c  TestSceneUpdate.h  ground.gltf  resources.json  scene.json  view.json
testers/TestText/: Box.msl  CMakeLists.txt  Font.msl  FontTess.msl  Icon.msl  README.md  SetupOpenGL.c  SetupOpenGL.h  TestText.c
testers/TestVectorDraw/: CMakeLists.txt  README.md  SetupOpenGL.c  SetupOpenGL.h  TestVectorDraw.c  TextureIcon.msl  VectorElementFill.msl  VectorElementFillSRGB.msl  VectorElementImage.msl  VectorElementLine.msl  VectorElementLineSRGB.msl  VectorElementShape.msl  VectorElementShapeSRGB.msl  VectorElementText.msl  VectorElementTextColor.msl  VectorElementTextColorSRGB.msl  VectorElementTextGradient.msl  VectorElementTextGradientSRGB.msl  VectorElementTextSRGB.msl  resources.json
testers/TestVectorDrawScene/: CMakeLists.txt  README.md  Scene.json  SceneResources.json  TestVectorDrawScene.c  Text.msl  VectorElementFill.msl  VectorElementImage.msl  VectorElementLine.msl  VectorElementTextColor.msl  VectorElementTextGradient.msl  VectorResources.json  View.json
(+2794 files in other folders)
